--- a/Projeto_MVC/Views/Exame/Index.cshtml
+++ b/Projeto_MVC/Views/Exame/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="card">
     <div class="card-header d-flex">
-        <h4 class="flex-grow-1">Leilões</h4>
+        <h4 class="flex-grow-1">Exames</h4>
         <a class="btn btn-outline-primary" asp-controller="exame" asp-action="Insert" title="Inclusão">
             <i class="fa fa-plus" aria-hidden="true"></i>
             Novo
@@ -29,10 +29,14 @@
                     <thead>
                         <tr>
                             <th>Id</th>
-                            <th>Título</th>
-                            <th>Situação</th>
-                            <th>Descrição</th>
-                            <th>Ações</th>
+                            <th>Registro Hospitalar</th>
+                            <th>Microrganismo</th>
+                            <th>Material</th>
+                            <th>Clinica</th>
+                            <th>Contato</th>
+                            <th>Data Resultado</th>
+                            <th>Data Cadastro</th>
+                            <th>Data Última Atualização</th>
                         </tr>
                     </thead>
                     <tbody>
