--- a/Projeto_MVC/Views/Shared/_Layout.cshtml
+++ b/Projeto_MVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Alura.LeilaoOnline</title>
+    <title>@ViewData["Title"] - HSPM-SP.Sistema_Isolamento_MVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/dist/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Área Pública</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Leilao" asp-action="Index">Administração</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Exame" asp-action="Index">Administração</a>
                         </li>
                     </ul>
                 </div>
